# Trafic

./: .gitignore  CMakeLists.txt  Common.cmake  Dockerfile  LICENSE  README.md  SuperBuild.cmake  Trafic.cmake  TraficConfig.cmake.in  setup_docker.sh
CLI/cxx/: CMakeLists.txt
CLI/cxx/createLandmarks/: CMakeLists.txt  README.md  clusterLandmarks.py  createLandmarks.cxx  createLandmarks.xml  fiberprocessing.cxx  fiberprocessing.h
CLI/cxx/distancemapfilter/: CMakeLists.txt  distancemapfilter.cxx  distancemapfilter.h  distancemapfilter.hxx  distancemapfilter.xml
CLI/cxx/fiberfeaturescreator/: CMakeLists.txt  fiberfeaturescreator.cxx  fiberfeaturescreator.h  fiberfeaturescreator.hxx  fiberfeaturescreator.xml
CLI/cxx/fibersampling/: CMakeLists.txt  fibersampling.cxx  fibersampling.h  fibersampling.xml
CLI/cxx/polydatatransform/: CMakeLists.txt
CLI/cxx/utils/: fiberfileIO.hxx
Docker/: Dockerfile  setup_docker.sh
Docker/cpu/: Dockerfile
Docker/gpu/: Dockerfile
SuperBuild/: External_SlicerExecutionModel.cmake  External_VTK.cmake  External_niral_utilities.cmake
TrafficBi/: CMakeLists.txt  TrafficBi.py
TrafficBi/Resources/Landmarks/: Arc_L_FT_bundle_clean_landmarks.fcsv  Arc_R_FrontoParietal_bundle_clean_landmarks.fcsv  CGC_L_bundle_clean_landmarks.fcsv  CGC_R_bundle_clean_landmarks.fcsv  CGH_L_bundle_clean_landmarks.fcsv  CGH_R_bundle_clean_landmarks.fcsv  CorpusCallosum_BODY_bundle_clean_landmarks.fcsv  CorpusCallosum_Genu_bundle_clean_landmarks.fcsv  CorpusCallosum_Parietal_bundle_clean_landmarks.fcsv  CorpusCallosum_PreMotor_bundle_clean_landmarks.fcsv  CorpusCallosum_Splenium_bundle_clean_landmarks.fcsv  CorpusCallosum_Tapetum_bundle_clean_landmarks.fcsv  CorticoFugal-Left_Motor_bundle_clean_landmarks.fcsv  CorticoFugal-Right_Motor_bundle_clean_landmarks.fcsv  CorticoFugal-Right_Parietal_bundle_clean_landmarks.fcsv  CorticoRecticular-Left_bundle_clean_landmarks.fcsv  CorticoSpinal-Right_bundle_clean_landmarks.fcsv  CorticoThalamic_L_PreFrontal_bundle_clean_landmarks.fcsv  CorticoThalamic_L_SUPERIOR_bundle_clean_landmarks.fcsv  CorticoThalamic_Left_Motor_bundle_final_clean_landmarks.fcsv  CorticoThalamic_Left_Parietal_bundle_final_clean_landmarks.fcsv  CorticoThalamic_R_PreFrontal_bundle_clean_landmarks.fcsv  CorticoThalamic_Right_Motor_bundle_final_clean_landmarks.fcsv  CorticoThalamic_Right_Parietal_bundle_final_clean_landmarks.fcsv  CorticoThalamic_Right_PreMotor_bundle_final_clean_landmarks.fcsv  IFOF_L_bundle_clean_landmarks.fcsv  IFOF_R_bundle_clean_landmarks.fcsv  ILF_R_bundle_final_clean_landmarks.fcsv  Optic_Tract_L_bundle_clean_landmarks.fcsv  Optic_Tract_R_bundle_clean_landmarks.fcsv  SLF_II_R_bundle_clean_landmarks.fcsv  UNC_L_bundle_clean_landmarks.fcsv
TrafficLib/: PipelineEval.py  Traffic-Classification  Traffic-Train  envInstall.sh  envInstallTFLinux.sh  envInstallTFMacOS.sh  envTensorFlow.py  fiberfileIO.py  makeDataset.py  networkDef.py  runClassification.py  runPipeline.py  runStore.py  runTraining.py  storeDef.py
TrafficMulti/: CMakeLists.txt  TrafficMulti.py
TrafficMulti/Resources/Landmarks/: landmarks_32pts_afprop.fcsv
TrafficMulti/Resources/UI/: TrafficMultiEditionTab.ui  TrafficMultiTrainingTab.ui
TraficBi/: CMakeLists.txt  TrafficBi.py  TraficBi.py
TraficBi/Resources/Landmarks/: Arc_L_FrontoParietal_bundle_clean_landmarks.fcsv  Arc_L_TemporoParietal_bundle_clean_landmarks.fcsv  Arc_R_FT_bundle_clean_landmarks.fcsv  Arc_R_TemporoParietal_bundle_clean_landmarks.fcsv  CorticoFugal-Left_Parietal_bundle_clean_landmarks.fcsv  CorticoFugal-Left_PreFrontal_bundle_clean_landmarks.fcsv  CorticoFugal-Left_PreMotor_bundle_clean_landmarks.fcsv  CorticoFugal-Right_PreFrontal_bundle_clean_landmarks.fcsv  CorticoFugal-Right_PreMotor_bundle_clean_landmarks.fcsv  CorticoRecticular-Right_bundle_clean_landmarks.fcsv  CorticoSpinal-Left_bundle_clean_landmarks.fcsv  CorticoThalamic_Left_PreMotor_bundle_final_clean_landmarks.fcsv  CorticoThalamic_R_SUPERIOR_bundle_clean_landmarks.fcsv  Fornix_R_bundle_clean_landmarks.fcsv  ILF_L_bundle_final_clean_landmarks.fcsv  OpticRadiation_Left_bundle_clean_landmarks.fcsv  OpticRadiation_Right_bundle_clean_landmarks.fcsv  SLF_II_L_bundle_clean_landmarks.fcsv  UNC_R_bundle_clean_landmarks.fcsv
TraficLib/: CMakeLists.txt  PipelineEval.py  PipelineTrain.py  Traffic-Train  envInstallTF.py  envInstallTFLinux.sh  envInstallTFMacOS.sh  envTensorFlow.py  extractClassifiedFibers.py  fiber_preprocessing.py  fiberfileIO.py  makeDataset.py  networkDef.py  runClassification.py  runPCA.py  runStore.py  runTraining.py  smote.py  storeDef.py
TraficLib/Logs/: training_err.txt
TraficLib/Resources/: Trafic-Classification  envInstall.sh  envInstallTFLinux.sh
TraficMulti/: CMakeLists.txt  TraficMulti.py  TraficMulti_cli.py
TraficMulti/Resources/UI/: TraficMultiTrainingTab.ui
TraficMulti/Testing/: test_TF.py
